# itgmania-profile-switcher

./: LICENSE  ProfileSwitcher.lua  README.md  pyproject.toml  server.py
SL-Module/: ProfileSwitcher.lua
examples/: db.json
src/itgprofiles/: card-hid-reader.py  cli.py  consts.py  flipper-reader.py  flipper_reader.py  hid_reader.py  lib.py  server.py  set-profile.py
udev-rules/: 99-hid-id-reader.rules
